# batch_file_renamer

./: CMakeLists.txt  appveyor.yml  readme.md
src/batch_file_renamer/: CMakeLists.txt
src/batch_file_renamer/include/batch_file_renamer/: batch_file_renamer.h
src/batch_file_renamer/src/: batch_file_renamer.cpp
src/batch_file_renamer/test/: batch_file_renamer_test.cpp  utils.cpp  utils.h
src/batch_file_renamer_c/: CMakeLists.txt
src/batch_file_renamer_c/include/batch_file_renamer_c/: batch_file_renamer.h
src/batch_file_renamer_c/src/: batch_file_renamer.cpp
src/batch_file_renamer_csharp/: BatchFileRenamer.cs  CMakeLists.txt
src/batch_file_renamer_csharp/Properties/: AssemblyInfo.cs
src/common/: CMakeLists.txt
src/common/src/: foo.cpp
src/filesystem_utils/: CMakeLists.txt
src/filesystem_utils/filesystem_utils_c/: CMakeLists.txt
src/filesystem_utils/filesystem_utils_c/include/filesystem_utils_c/: filesystem_utils.h
src/filesystem_utils/filesystem_utils_c/src/: filesystem_utils.cpp
src/filesystem_utils/filesystem_utils_csharp/: CMakeLists.txt  FileSystemUtils.cs
src/filesystem_utils/filesystem_utils_csharp/Properties/: AssemblyInfo.cs
src/filesystem_utils/filesystem_utils_cxx/: CMakeLists.txt
src/filesystem_utils/filesystem_utils_cxx/include/filesystem_utils_cxx/: filesystem_utils.h
src/filesystem_utils/filesystem_utils_cxx/src/: filesystem_utils.cpp
src/filesystem_utils/filesystem_utils_cxx/test/: filesystem_utils_test.cpp  main.cpp
src/filesystem_utils/include/filesystem_utils/: filesystem_utils.h
src/filesystem_utils/src/: filesystem_utils.cpp
src/wpf_app/: CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  MainWindowModel.cs  packages.config
src/wpf_app/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
